--- a/PotafoliosWeb/css/style.css
+++ b/PotafoliosWeb/css/style.css
@@ -385,6 +385,20 @@ dialog {
 
 .imgCarrusel {
     width: 350px;
+    height: 350px;
+    object-fit: cover;
+}
+
+#atras{
+    filter: drop-shadow(0px 0px 1px white); 
+    width: 40px;
+    cursor: pointer;
+}
+#adelante{
+    transform: scaleX(-1);
+    filter: drop-shadow(0px 0px 1px white); 
+    width: 40px;
+    cursor: pointer;
 }
 
 @media (max-width: 830px) {
