--- a/PotafoliosWeb/css/style.css
+++ b/PotafoliosWeb/css/style.css
@@ -125,7 +125,7 @@ figure {
 .div-info {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;    
+    justify-content: space-evenly;
     width: 50%;
 }
 
@@ -240,19 +240,21 @@ h2 {
 }
 
 .grid-item-proyect:hover * {
-
     opacity: 1;
 }
 
 #cardProyectGDB {
     color: black;
-    background-image: url('../img/JSLogo.svg')
+    background-position-x: center;
+    background-position-y: 25%;
+    background-image: url('../img/PortadaGDB.webp')
 }
 
 #cardProyectEcommerce {
     color: black;
-    background-color: white;
-    background-image: url('../img/ReactLogo.png')
+    background-position: center;
+    background-size: cover;
+    background-image: url('../img/PortadaEcommerce.webp')
 }
 
 .div-link-proyect {
@@ -366,8 +368,8 @@ dialog {
 }
 
 .containerCarruselInfo {
-    position: relative;  
-    align-self: center; 
+    position: relative;
+    align-self: center;
 }
 
 .conainerFlechitasCarrusel {
@@ -388,14 +390,15 @@ dialog {
     border-radius: 10px;
 }
 
-.izqImgCarrusel{
-    filter: drop-shadow(0px 0px 1px white); 
+.izqImgCarrusel {
+    filter: drop-shadow(0px 0px 1px white);
     width: 40px;
     cursor: pointer;
 }
-.derImgCarrusel{
+
+.derImgCarrusel {
     transform: scaleX(-1);
-    filter: drop-shadow(0px 0px 1px white); 
+    filter: drop-shadow(0px 0px 1px white);
     width: 40px;
     cursor: pointer;
 }
@@ -475,6 +478,7 @@ dialog {
     .div-info {
         width: auto;
     }
+
     #fotoYolaus {
         object-fit: cover;
         width: 300px;
