--- a/PotafoliosWeb/css/style.css
+++ b/PotafoliosWeb/css/style.css
@@ -267,11 +267,11 @@ h2 {
 }
 
 #cardProyectProyectosDuranteLaCarrera h3 {
-    text-shadow: 
-    -1px -1px 2px black,
-    1px -1px 2px black,
-    1px 1px 2px black,
-    -1px 1px 2px black;
+    text-shadow:
+        -1px -1px 2px black,
+        1px -1px 2px black,
+        1px 1px 2px black,
+        -1px 1px 2px black;
     font-size: 1.2rem;
 }
 
@@ -424,6 +424,42 @@ dialog {
     filter: drop-shadow(0px 0px 1px white);
     width: 40px;
     cursor: pointer;
+}
+
+.abautMeContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    margin: 1.5rem;
+}
+.abautMeContainer p {
+    max-width: 680px;
+    font-size: 1.2rem;
+    text-align: justify;
+}
+
+.mianFooter{
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    height: 20vh;
+    width: 100%;
+    background-color: rgb(92, 0, 0);
+    box-shadow: 0px 0px 5px white;
+    padding: 1rem 2rem 1rem 2rem;    
+}
+
+.mianFooter li {
+    margin: 5px
+}
+.mianFooter a {
+    display: flex;
+    gap: 5px;
+}
+.iconFooter{
+    width: 20px;
 }
 
 @media (max-width: 830px) {
