--- a/PotafoliosWeb/css/style.css
+++ b/PotafoliosWeb/css/style.css
@@ -6,7 +6,7 @@
     width: 100%;
     height: 100%;
     top: 0;
-    z-index: -1;
+    z-index: -2;
 }
 
 * {
@@ -86,7 +86,6 @@ a:hover {
     display: flex;
     align-items: center;
     flex-direction: column;
-
 }
 
 a:link,
@@ -122,7 +121,8 @@ a:active {
 }
 
 .presetacion header,
-figure, p {
+figure,
+p {
     margin: 0 2rem;
 }
 
@@ -147,9 +147,10 @@ h2 {
     text-wrap: wrap;
 }
 
-.div-info a{
+.div-info a {
     margin: 2rem 0 0 0;
 }
+
 .presetacion figure {
     padding: 0.7rem;
 }
@@ -199,8 +200,7 @@ h2 {
 }
 
 .grid {
-    margin: 1rem;
-    padding: 1rem;
+    margin: 2rem;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -219,6 +219,10 @@ h2 {
 
 .grid-item:hover {
     scale: 1.1;
+}
+
+.h3-title-item {
+    justify-content: center;
 }
 
 .grid-img {
@@ -559,6 +563,7 @@ dialog {
 
     }
 
+
     .btn-contacto:hover {
         color: white;
     }
@@ -599,6 +604,14 @@ dialog {
         font-size: 2rem;
     }
 
+    .main-container {
+        margin-top: 0rem;
+    }
+
+    .abautMeContainer {
+        margin: 0.5rem;
+    }
+
     .grid-item-proyect * {
         opacity: 1;
     }
@@ -612,8 +625,15 @@ dialog {
 
     .containerInfoText p {
         font-size: small;
+        margin: 1rem;
     }
 
+    .grid {
+        margin: 1rem;
+    }
+    .imgCarrusel {        
+        margin-bottom: 1rem;
+    }
 }
 
 @media (max-width: 650px) {
@@ -625,6 +645,5 @@ dialog {
 
     .imgCarrusel {
         width: 14rem;
-        margin-bottom: 1rem;
     }
 }
