--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -96,6 +97,10 @@ a:active {
 
 .toggle-btn {
     display: none;
+}
+
+.icon-menu {
+    width: 2.2rem;
 }
 
 .dropdown_nav-menu {
@@ -334,6 +339,24 @@ dialog {
     box-shadow: 0px 0px 40px 15px black;
     background-color: #1b1b1b;
     color: white;
+    transition: scale 0.3s ease,
+        display 0.3s ease allow-discrete;
+    scale: 0;
+
+    &[open] {
+        scale: 1;
+        transition: 0.3s ease-in-out;
+
+        @starting-style {
+            scale: 0;
+        }
+    }
+}
+
+dialog::backdrop {
+    transition: 0.7s;
+    -webkit-backdrop-filter: blur(2px);
+    backdrop-filter: blur(2px);
 }
 
 .btnCerrarInfo {
@@ -377,7 +400,7 @@ dialog {
 .containerInfo p {
     font-size: 16px;
     background-color: #1b1b1b;
-    text-align:start;
+    text-align: start;
     font-family: 'Inter', sans-serif;
 }
 
@@ -436,6 +459,10 @@ dialog {
     cursor: pointer;
 }
 
+.cierreDialog {
+    width: 0.8rem;
+}
+
 .abautMeContainer {
     display: flex;
     justify-content: center;
@@ -449,7 +476,7 @@ dialog {
     text-wrap: wrap;
     max-width: 580px;
     font-size: 1.2rem;
-    text-align: justify;
+    text-align: start;
 }
 
 .abautMeContainer div {
@@ -505,6 +532,29 @@ dialog {
     text-decoration: underline;
 }
 
+@keyframes show {
+    from {
+        opacity: 0;
+        scale: 80%;
+    }
+
+    to {
+        opacity: 1;
+        scale: 100%;
+    }
+}
+
+.animacion-aparecer {
+    view-timeline-name: --aparecer;
+    view-timeline-axis: block;
+
+    animation-timeline: --aparecer;
+    animation-name: show;
+
+    animation-range: entry 25% cover 50%;
+    animation-fill-mode: both;
+}
+
 @media (max-width: 830px) {
 
     .nav-menu {
@@ -520,12 +570,11 @@ dialog {
         text-align: center;
         align-items: center;
         justify-content: center;
-        font-size: 2rem;
         padding: 0.5rem;
         margin: 0;
     }
 
-    .toggle-btn i {
+    .toggle-btn img {
         display: flex;
         align-items: center;
         justify-content: center;
@@ -536,7 +585,6 @@ dialog {
         transition: 0.2s;
         text-shadow: 2px 2px 6px black;
     }
-
 
     .dropdown_nav-menu {
         display: flex;
@@ -571,7 +619,6 @@ dialog {
         align-items: center;
 
     }
-
 
     .btn-contacto:hover {
         color: white;
@@ -621,6 +668,10 @@ dialog {
         margin: 0.5rem;
     }
 
+    .abautMeContainer p {
+        text-align: center;
+    }
+
     .grid-item-proyect * {
         opacity: 1;
     }
@@ -643,6 +694,10 @@ dialog {
 
     .imgCarrusel {
         margin-bottom: 1rem;
+    }
+
+    .cierreDialog {
+        width: 1rem;
     }
 }
 
